--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
+    "react-router": "^7.9.6",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "swiper": "^12.0.3",
     "web-vitals": "^2.1.4"
   },
