--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.11.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -14,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
+    "jwt-decode": "^4.0.0",
+    "razorpay": "^2.9.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
